@@ -79,7 +79,7 @@ jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.ReadJson -libjars :HCAT_JAR
                                 ,'hadoop' => q\
 jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.ReadRC -libjars :HCAT_JAR: :THRIFTSERVER: all100krc :OUTPATH:
 \,
-                                ,'sql' => q\select * from all100krc;\
+                                ,'sql' => q\select name, age, floor(gpa) + 0.1 from all100krc;\
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
                                 },
@@ -89,6 +89,7 @@ jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.ReadRC -libjars :HCAT_JAR: 
                         'name' => 'Hadoop_Write',
                         'tests' => [
                                 {
+                                 'ignore' => 1, # Need to checkin HCATALOG-168.
                                  'num' => 1
                                 ,'hcat_prep'=>q\
 drop table if exists hadoop_write_1;
@@ -151,7 +152,7 @@ TBLPROPERTIES (
 jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.WriteRC -libjars :HCAT_JAR: :THRIFTSERVER: all100krc hadoop_write_3
 \,
                                 ,'result_table' => 'hadoop_write_3'
-                                ,'sql' => q\select * from all100krc;\
+                                ,'sql' => q\select name, age, floor(gpa) + 0.1 from all100krc;\
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
                                 },
