@@ -94,7 +94,8 @@ $cfg = {
                     'name' => 'Hive_Read',
                     'tests' => [ {
                         'num' => 1,
-                         'sql' => q\select * from all100krc;\,
+                         'sql' => q\select name, age, floor(gpa) from all100krc;\,
+                         'verify_sql' => q\select name, age, truncate(gpa, 0) from all100krc;\,
                          'floatpostprocess' => 1,
                          'delimiter' => '	',
                     } ]
@@ -106,9 +107,9 @@ $cfg = {
                          'sql' => q\
 drop table if exists hive_write_1;
 create table hive_write_1 (name string, age int, gpa double) stored as rcfile;
-insert into TABLE hive_write_1 select * from all100krc;\,
+insert into TABLE hive_write_1 select name, age, floor(gpa) + 0.1 from all100krc;\,
                          'result_table' => 'hive_write_1',
-                         'verify_sql' =>"select name, age, gpa from all100krc;",
+                         'verify_sql' =>"select name, age, floor(gpa) + 0.1 from all100krc;",
                          'floatpostprocess' => 1,
                          'delimiter' => '	',
                     } ]
