@@ -86,6 +86,7 @@ store c into ':OUTPATH:';\,
                         'tests' => [
 
                                 {
+                                 'ignore' => 1, # Need to checkin HCATALOG-168.
                                  'num' => 1
                                 ,'pig' => q\a = load 'all100k' using org.apache.hcatalog.pig.HCatLoader();
 store a into ':OUTPATH:';\,
@@ -105,8 +106,9 @@ store b into ':OUTPATH:';\,
                                 {
                                  'num' => 3
                                 ,'pig' => q\a = load 'all100krc' using org.apache.hcatalog.pig.HCatLoader();
-store a into ':OUTPATH:';\,
-				,'sql' => q\select * from all100krc;\
+b = foreach a generate name, age;
+store b into ':OUTPATH:';\,
+				,'sql' => q\select name, age from all100krc;\
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
                                 }
@@ -116,6 +118,7 @@ store a into ':OUTPATH:';\,
                         'name' => 'Pig_Write',
                         'tests' => [
                                 {
+                                 'ignore' => 1, # Need to checkin HCATALOG-168.
                                  'num' => 1
                                 ,'hcat_prep'=>q\drop table if exists pig_write_1;
 create table pig_write_1(t tinyint,si smallint,i int,b bigint,bool boolean,f float,d double,s string) stored as rcfile;\
@@ -142,8 +145,9 @@ create table pig_write_2(
 \
                                 ,'pig' => q\a = load 'all100kjson' using org.apache.hcatalog.pig.HCatLoader();
 b = foreach a generate s, i, d;
-store b into ':OUTPATH:';\,
+store b into 'pig_write_2' using org.apache.hcatalog.pig.HCatStorer();\,
 				,'sql' => q\select IFNULL(s, ""), IFNULL(i, ""), IFNULL(d, "") from all100kjson;\
+                                ,'result_table' => 'pig_write_2'
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
                                 },
@@ -161,8 +165,10 @@ TBLPROPERTIES (
 );
 \
                                 ,'pig' => q\a = load 'all100krc' using org.apache.hcatalog.pig.HCatLoader();
-store a into ':OUTPATH:';\,
-				,'sql' => q\select * from all100krc;\
+b = foreach a generate name, age;
+store b into 'pig_write_3' using org.apache.hcatalog.pig.HCatStorer();\,
+				,'sql' => q\select name, age from all100krc;\
+                                ,'result_table' => 'pig_write_3'
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
                                 }
