@@ -1,23 +1,23 @@
-<!--  Licensed to the Apache Software Foundation (ASF) under one or more                  
-   contributor license agreements.  See the NOTICE file distributed with               
-   this work for additional information regarding copyright ownership.                 
-   The ASF licenses this file to You under the Apache License, Version 2.0             
-   (the "License"); you may not use this file except in compliance with                
-   the License.  You may obtain a copy of the License at                               
-                                                                                       
-       http://www.apache.org/licenses/LICENSE-2.0                                      
-                                                                                       
-   Unless required by applicable law or agreed to in writing, software                 
-   distributed under the License is distributed on an "AS IS" BASIS,                   
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.            
-   See the License for the specific language governing permissions and                 
+<!--  Licensed to the Apache Software Foundation (ASF) under one or more
+   contributor license agreements.  See the NOTICE file distributed with
+   this work for additional information regarding copyright ownership.
+   The ASF licenses this file to You under the Apache License, Version 2.0
+   (the "License"); you may not use this file except in compliance with
+   the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
    limitations under the License.-->
-                                                                                       
+
 <project name="HCatalog-test-utils" default="udf-jar">
 
     <property name="udf.jarfile" value="testudf.jar" />
-    <property name="build.dir" value="${basedir}/build" />
-    <property name="src.dir" value="${basedir}/org/" />
+    <property name="udfs.build.dir" value="${basedir}/build" />
+    <property name="udfs.src.dir" value="${basedir}/org/" />
 
     <path id="udf-classpath">
        <fileset file="../../../../../../build/hcatalog/*.jar" />
@@ -27,17 +27,17 @@
     </path>
 
     <target name="init">
-        <mkdir dir="${build.dir}" />
+        <mkdir dir="${udfs.build.dir}" />
     </target>
 
     <target name="clean">
-        <delete dir="${build.dir}" />
+        <delete dir="${udfs.build.dir}" />
         <delete file="${udf.jarfile}" />
     </target>
 
     <target name="udf-compile" depends="init">
         <echo>*** Compiling UDFs ***</echo>
-        <javac srcdir="${src.dir}" destdir="${build.dir}" debug="on">
+        <javac srcdir="${udfs.src.dir}" destdir="${udfs.build.dir}" debug="on">
             <classpath refid="udf-classpath" />
         </javac>
     </target>
