@@ -91,6 +91,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-198. A few issues keep e2e tests from running in an automated environment (gates)
+
   HCAT-197. Data generator for e2e assumes hadoop tarball installation (daijy via khorgath)
 
   HCAT-196. Remove dependency on pig.jar for hcatalog server (daijy via khorgath)
